# shrinkage

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: rhiza_book.yml  rhiza_ci.yml  rhiza_release.yml  rhiza_sync.yml  rhiza_weekly.yml
.rhiza/: .rhiza-version  .rhiza-version.rej  rhiza.mk  rhiza.mk.rej  template.yml
docs/: api.md
src/shrinkage/: __init__.py  _validation.py
src/shrinkage/linear/: __init__.py  _cov1para_debug.py  cov1para.py
src/shrinkage/nonlinear/: __init__.py  qis.py
tests/: conftest.py  test_cov1para.py
tests/fuzz/: fuzz_cov1para.py
tests/shrinkage/: test___init__.py  test__validation.py
tests/shrinkage/linear/: test___init__.py  test_cov1para.py
tests/shrinkage/nonlinear/: test___init__.py  test_qis.py
