[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrinkage"
version = "0.1.2"
description = "Linear and nonlinear shrinkage estimators following Ledoit and Wolf"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Thomas Schmelzer", email = "thomas.s@yukkalab.com" },
]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cvx-linalg>=0.8.0",
    "numpy>=2.4.6",
]

[project.urls]
Homepage = "https://github.com/Jebel-Quant/shrinkage"
Repository = "https://github.com/Jebel-Quant/shrinkage"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
]

[dependency-groups]
test = ["pytest>=9.1.1", "pytest-cov>=5.0"]
lint = ["ruff>=0.15.18"]

[tool.deptry]
package_module_name_map = {"cvx-linalg" = "cvx"}
per_rule_ignores = {"DEP002" = ["pytest", "pytest-cov"]}

[tool.coverage.run]
omit = ["src/shrinkage/linear/_cov1para_debug.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/shrinkage"]
