[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrinkage"
version = "0.1.2"
description = "Linear and nonlinear shrinkage estimators for covariance matrices following Ledoit and Wolf"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Thomas Schmelzer", email = "thomas.s@yukkalab.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.4.6",
]

[project.urls]
Homepage = "https://github.com/Jebel-Quant/shrinkage"
Repository = "https://github.com/Jebel-Quant/shrinkage"

[dependency-groups]
test = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
]
lint = ["ruff>=0.15.21"]

[tool.deptry]
per_rule_ignores = {"DEP002" = ["pytest", "pytest-cov", "hypothesis"]}

[tool.hatch.build.targets.wheel]
packages = ["src/shrinkage"]
